@startuml
class Kandidat {
    String vorname
    String nachname
    char geschlecht
    Date geburtsdatum
    String beruf
}

class Bundesland {
    String name
    boolean osten
    Image wappen
}

class Partei {
    String name
    String id
    boolean nationaleMinderheit
    int gruendungsjahr
    String farbe
    Image logo
}

class Bundestagswahl{
   Date tag
   int nummer
}

class Landesliste {
}

class Listenplatz {
    int position
}

class Wahlkreis {
    int nummer
    String name
    int deutscheBevoelkerung
    int anzahlGemeinden
    int flaeche
    int altersDurchschnitt
    List<GeoJSON> begrenzung
}

class ZweitstimmenErgebnis {
    int anzahl
}

class Stimme {
    boolean gueltig
    boolean briefwahl
}

class Zweitstimme extends Stimme {
}

class Erststimme extends Stimme {
}

class Direktkandidatur {
    int anzahlStimmen
}

Landesliste "*" -- "1" Bundesland : in >
Landesliste "*" -- "1" Partei : < reicht ein
Landesliste "*" -- "1" Bundestagswahl: zur >

Landesliste "1" *-- "1..*" Listenplatz : enthaelt >
Listenplatz "*" -- "1" Kandidat : enthaelt >

Wahlkreis "1..*" --* "1" Bundesland : besteht aus <

Wahlkreis "299" -- "1" Bundestagswahl: gueltig fuer >

Direktkandidatur "*" -- "1" Kandidat : von >
Direktkandidatur "*" -- "1" Wahlkreis : < hat
Direktkandidatur "*" -- "0..1" Partei : von >
Direktkandidatur "*" -- "1" Bundestagswahl: zur >

Erststimme "*" -- "0..1" Direktkandidatur : fuer >
Zweitstimme "*" -- "0..1" Landesliste : fuer >
Stimme "*" -up- "1" Wahlkreis : stammt aus >
ZweitstimmenErgebnis "*" -left- "1" Wahlkreis : stammt aus >
ZweitstimmenErgebnis "*" -- "1" Landesliste : fuer >
@enduml